build try again

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/behaviortreesplus.loader.js";
       var config = {
-        dataUrl: buildUrl + "/behaviortreesplus.data.gz",
-        frameworkUrl: buildUrl + "/behaviortreesplus.framework.js.gz",
-        codeUrl: buildUrl + "/behaviortreesplus.wasm.gz",
+        dataUrl: buildUrl + "/behaviortreesplus.data",
+        frameworkUrl: buildUrl + "/behaviortreesplus.framework.js",
+        codeUrl: buildUrl + "/behaviortreesplus.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "m2dv2",
